--- a/apex_hands_on/force-app/main/default/classes/VerifyDate.cls
+++ b/apex_hands_on/force-app/main/default/classes/VerifyDate.cls
@@ -9,6 +9,7 @@ public class VerifyDate {
     }
   }
   //method to check if date2 is within the next 30 days of date1
+  @TestVisible
   private static Boolean DateWithin30Days(Date date1, Date date2) {
     //check for date2 being in the past
     if( date2 < date1) { return false; }
@@ -18,6 +19,7 @@ public class VerifyDate {
     else { return true; }
   }
   //method to return the end of the month of a given date
+  @TestVisible
   private static Date SetEndOfMonthDate(Date date1) {
     Integer totalDays = Date.daysInMonth(date1.year(), date1.month());
     Date lastDay = Date.newInstance(date1.year(), date1.month(), totalDays);
